tests/integration/snapshots/integration__conformance__n_number_-2..json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[-2.]
stdout ---

stderr ---
error: expected fraction digit following dot, found `]`
 --> stdin:1:5
  |
1 | [-2.]
  |  ---^
  |  | |
  |  | decimal point found here
  |  number found here
